# 01-Lab01-Babakin

./: CMakeLists.txt
JSONfiles/: example2.json  invalid_avg.json  invalid_debt.json  invalid_group.json  invalid_meta.json  invalid_name.json  invalid_size.json  not_array.json
include/: JsonTable.hpp  any_and_json.hpp  student.hpp
scripts/: coverage.sh
sources/: JsonTable.cpp  student.cpp
tests/: test.cpp
